# IDM-VTON

./: .gitignore  inference.py  inference.sh  inference_dc.py  pyproject.toml  train_xl.py  train_xl.sh
gradio_demo/: apply_net.py
idm_vton/: __init__.py
idm_vton/gradio_demo/: app.py  apply_net.py
idm_vton/gradio_demo/densepose/: config.py
idm_vton/gradio_demo/densepose/converters/: chart_output_hflip.py  chart_output_to_chart_result.py  segm_to_mask.py  to_chart_result.py  to_mask.py
idm_vton/gradio_demo/densepose/data/: build.py  dataset_mapper.py  image_list_dataset.py  utils.py
idm_vton/gradio_demo/densepose/engine/: trainer.py
idm_vton/gradio_demo/densepose/evaluation/: d2_evaluator_adapter.py  densepose_coco_evaluation.py  evaluator.py  mesh_alignment_evaluator.py  tensor_storage.py
idm_vton/gradio_demo/densepose/modeling/: build.py  confidence.py  densepose_checkpoint.py  filter.py  hrfpn.py  hrnet.py  inference.py  test_time_augmentation.py
idm_vton/gradio_demo/densepose/structures/: data_relative.py  list.py  mesh.py
idm_vton/gradio_demo/densepose/utils/: transform.py
idm_vton/gradio_demo/densepose/vis/: densepose_data_points.py  densepose_outputs_iuv.py  (+4 more)
idm_vton/src/: transformerhacked_garmnet.py  transformerhacked_tryon.py  unet_block_hacked_garmnet.py  unet_block_hacked_tryon.py  unet_hacked_garmnet.py  unet_hacked_tryon.py
ip_adapter/: test_resampler.py
preprocess/humanparsing/: parsing_api.py  run_parsing.py
preprocess/humanparsing/networks/: __init__.py
preprocess/humanparsing/utils/: consistency_loss.py  miou.py  schp.py
(+147 files in other folders)
